[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/objets_en_mouvement/vue_de_haut/Joueur2_de_haut.gd" type="Script" id=1]
[ext_resource path="res://Art/Personnages/Joueur/joueur2.png" type="Texture" id=2]
[ext_resource path="res://Art/allo.png" type="Texture" id=3]




[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 15 )

[node name="Joueur2_de_haut" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Fourmi_de_haut" type="AnimatedSprite" parent="."]
position = Vector2( 1, 0 )
scale = Vector2( -1, 1 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 2 )

[node name="RayCastD" type="RayCast2D" parent="."]
position = Vector2( 0, 16 )
cast_to = Vector2( 17, 0 )

[node name="RayCastB" type="RayCast2D" parent="."]
position = Vector2( 0, 16 )
cast_to = Vector2( 0, 17 )

[node name="Zone_saut" type="Area2D" parent="."]

[node name="Collision_saut" type="CollisionShape2D" parent="Zone_saut"]
position = Vector2( 64, 16 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Zone_saut/Collision_saut"]
position = Vector2( 0.386902, -0.773796 )
scale = Vector2( 0.0772658, 0.0792 )
texture = ExtResource( 3 )
[connection signal="body_entered" from="Zone_saut" to="." method="_on_Zone_saut_body_entered"]
[connection signal="body_exited" from="Zone_saut" to="." method="_on_Zone_saut_body_exited"]
